--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images-active/Logo.png" />
-    <title>Processing confirm</title>
+    <title>Processing</title>
     <link rel="stylesheet" href="main.css" type="text/css" />
     <link rel="stylesheet" href="reset.css" type="text/css" />
     <!-- font awesome -->
