--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
           <img
             class="d-block w-100"
-            src="/images-active/frame2.jpg"
+            src="/images-active/slide1.JPG"
             alt="Second slide"
           />
         </div>
@@ -130,7 +130,7 @@
           </div>
           <img
             class="d-block w-100"
-            src="/images-active/frame3.jpg"
+            src="/images-active/slide1.JPG"
             alt="Third slide"
           />
         </div>
@@ -155,22 +155,14 @@
             </div>
           </div>
         </div>
-        <div class="content-wrapper">
-          <div class="content">
-            <div class="intro-text">
-              <h3>Heading</h3>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 'Content
-                here,
-              </p>
-            </div>
-          </div>
-          <div class="content">
-            <div class="intro-img"></div>
-          </div>
+      </div>
+      <div class="bento-holder">
+        <div class="bento-wrapper">
+          <div class="item1"></div>
+          <div class="item2"></div>
+          <div class="item3"></div>
+          <div class="item4"></div>
+          <div class="item5"></div>
         </div>
       </div>
     </main>
