--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
       </div>
     </div>
     <div class="scrollDown-container">
-      <div class="scrollDown">
-        <h5>Scroll Down</h5>
-      </div>
-      <div class="scrollDown-2">
-        <h5>Enjoy!</h5>
-      </div>
+      <a href="#introduction" class="scrollDown-hover">
+        <div class="scrollDown">
+          <h5>Scroll Down</h5>
+        </div>
+      </a>
     </div>
     <main>
       <div class="content-section-holder" id="introduction">
