--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <a class="nav-link" href="#">首 頁</a>
             <a class="nav-link" href="#introduction">市集介紹</a>
             <a class="nav-link" href="#photos">照片集錦</a>
-            <a class="nav-link" href="#Information">活動資訊</a>
-            <a class="nav-link" href="#Contact">聯絡我們</a>
+            <a class="nav-link" href="#information">活動資訊</a>
+            <a class="nav-link" href="#contact">聯絡我們</a>
           </ul>
           <div class="button-parent">
             <button
@@ -267,19 +267,19 @@
             <h5 class="mb-3 text-dark footer-link">連結</h5>
             <ul class="list-unstyled mb-0">
               <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f">首 頁</a>
+                <a href="#" style="color: #4f4f4f">首 頁</a>
               </li>
               <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f">市集介紹</a>
+                <a href="#introduction" style="color: #4f4f4f">市集介紹</a>
               </li>
               <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f">照片集錦</a>
+                <a href="#photos" style="color: #4f4f4f">照片集錦</a>
               </li>
               <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f">活動資訊</a>
+                <a href="#information" style="color: #4f4f4f">活動資訊</a>
               </li>
               <li>
-                <a href="#!" style="color: #4f4f4f">聯絡我們</a>
+                <a href="#contact" style="color: #4f4f4f">聯絡我們</a>
               </li>
             </ul>
           </div>
