--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <a class="nav-link" href="#">首 頁</a>
-            <a class="nav-link" href="#introduction">市集介紹</a>
-            <a class="nav-link" href="#photos">照片集錦</a>
-            <a class="nav-link" href="#information">活動資訊</a>
-            <a class="nav-link" href="#contact">聯絡我們</a>
+            <a class="nav-link" href="#Introduction">市集介紹</a>
+            <a class="nav-link" href="#Photos">照片集錦</a>
+            <a class="nav-link" href="#Information">特別活動預約</a>
+            <a class="nav-link" href="#Schedule">活動檔期</a>
+            <a class="nav-link" href="#Contact">聯絡我們</a>
           </ul>
           <div class="button-parent">
             <button
@@ -109,7 +110,7 @@
       </div>
     </div>
     <div class="scrollDown-container">
-      <a href="#introduction" class="scrollDown-hover">
+      <a href="#Introduction" class="scrollDown-hover">
         <div class="scrollDown">
           <h5>請下滑</h5>
         </div>
@@ -117,7 +118,7 @@
     </div>
 
     <main>
-      <div class="content-section-holder" id="introduction">
+      <div class="content-section-holder" id="Introduction">
         <div class="content-wrapper">
           <div class="content-img">
             <div class="content-img-1"></div>
@@ -128,15 +129,15 @@
             <div class="intro-text">
               <span>秋日將至，微風徐徐</span>
               <p>
-                在這個特別的市集中，您將沉浸在秋天的氛圍中，感受微風拂過皮膚的清涼。<br />
-                這個市集充滿著秋季美食、手工藝品和音樂表演，是一個家庭友好的活動，<br />
-                帶來歡樂和共融，等待您的蒞臨，享受秋天的樂趣。
+                在這個特別的市集中，您將沉浸在秋天的氛圍中，<br />
+                感受微風拂過皮膚的清涼。<br />
+                在充滿著秋季美食、手工藝品和音樂表演中享受秋天的樂趣。<br />
               </p>
             </div>
           </div>
         </div>
       </div>
-      <div class="bento-holder" id="photos">
+      <div class="bento-holder" id="Photos">
         <div class="bento-wrapper">
           <div class="item-1">
             <div class="overlay"><h1>Text</h1></div>
@@ -165,9 +166,9 @@
       <div class="container-cart" id="Information">
         <div class="card-cart">
           <div class="card-cart-title">
-            <h4>歡迎來到我們的活動預約頁面!</h4>
+            <h4>歡迎來到我們的特別活動預約頁面!</h4>
             <p>
-              這裡，您可以輕鬆預約參加我們精心策劃的各種活動，無論是文化體驗、冒險旅行、藝術工作坊還是特別活動，我們都有豐富的選擇等待著您。
+              這裡，您可以輕鬆預約我們精心策劃的各種活動，無論是文化體驗、冒險旅行、藝術工作坊還是特別活動，我們都有豐富的選擇等待著您。
             </p>
           </div>
           <div class="item-section">
@@ -177,9 +178,9 @@
                   <img src="./images-active/autumnleaves-1.png" alt="" />
                 </div>
                 <div class="promo">
-                  <h2>創意工作坊：油畫藝術</h2>
+                  <h2>歷史之旅: 歷史故事講解</h2>
                   <p>
-                    挑選主題，調配色彩，並在專業指導下創作出獨特的油畫作品。無論您是油畫新手還是有經驗的畫家，這個工作坊都歡迎您參加。
+                    這是一次穿越時光的機會，讓你沉浸在城市的過去，聆聽傳說和故事，感受歷史的魅力。
                   </p>
                 </div>
                 <div class="cart-btn">
@@ -192,15 +193,15 @@
                 </div>
               </div>
             </div>
-            <div class="description" id="mid">
+            <div class="description">
               <div class="cart-text">
                 <div class="cart-img">
                   <img src="./images-active/autumnleaves.png" alt="" />
                 </div>
                 <div class="promo">
-                  <h2>藝術工作坊：陶瓷製作</h2>
+                  <h2>大自然音樂會:音樂饗宴</h2>
                   <p>
-                    無論您是對藝術充滿熱情，還是只是想嘗試一些新事物，這個活動都會成為一個你難以忘懷的體驗，把您的藝術夢想實現。
+                    你將享受到大自然音樂會的精彩表演。音樂家們將以大自然為靈感，演奏悅耳的音樂!
                   </p>
                 </div>
                 <div class="cart-btn">
@@ -219,9 +220,30 @@
                   <img src="./images-active/autumnleaves-2.png" alt="" />
                 </div>
                 <div class="promo">
-                  <h2>美食之旅：品味當地美食</h2>
+                  <h2>街頭藝術表演:藝術盛會</h2>
                   <p>
-                    不論您是不是對不同文化的美食感興趣，還是想嘗試當地的經典佳餚，跟隨我們，一起發現美食的魔力，並在每一道菜中發現一個新的故事。
+                    街頭藝術家們將在我們的舞台上進行現場表演，包括塗鴉、街舞和音樂演出。
+                  </p>
+                </div>
+                <div class="cart-btn">
+                  <button
+                    type="button"
+                    class="btn btn-success btn-block promo-button"
+                  >
+                    <p>預約</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="description">
+              <div class="cart-text">
+                <div class="cart-img">
+                  <img src="./images-active/autumnleaves-2.png" alt="" />
+                </div>
+                <div class="promo">
+                  <h2>多元文化探索:跨界新境</h2>
+                  <p>
+                    我們將為您呈現多國文化的舞蹈和音樂表演，展示不同國家的藝術風格。
                   </p>
                 </div>
                 <div class="cart-btn">
@@ -270,16 +292,16 @@
                 <a href="#" style="color: #4f4f4f">首 頁</a>
               </li>
               <li class="mb-1">
-                <a href="#introduction" style="color: #4f4f4f">市集介紹</a>
+                <a href="#Introduction" style="color: #4f4f4f">市集介紹</a>
               </li>
               <li class="mb-1">
-                <a href="#photos" style="color: #4f4f4f">照片集錦</a>
+                <a href="#Photos" style="color: #4f4f4f">照片集錦</a>
               </li>
               <li class="mb-1">
-                <a href="#information" style="color: #4f4f4f">活動資訊</a>
+                <a href="#Information" style="color: #4f4f4f">活動資訊</a>
               </li>
               <li>
-                <a href="#contact" style="color: #4f4f4f">聯絡我們</a>
+                <a href="#Contact" style="color: #4f4f4f">聯絡我們</a>
               </li>
             </ul>
           </div>
