--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a class="nav-link" href="#Introduction"
               ><i class="fas fa-scroll" style="color: #404040"></i>市集介紹</a
             >
-            <a class="nav-link" href="#Photos"
+            <a class="nav-link" href="#Schedule"
               ><i class="fas fa-images" style="color: #404040"></i>活動檔期</a
             >
             <a class="nav-link" href="#Information"
@@ -140,7 +140,7 @@
                   在充滿著秋季美食、手工藝品和音樂表演中享受秋天的樂趣。<br />
                 </p>
                 <div class="intro-buttons">
-                  <a href="#Photos" class="nextPage-button"
+                  <a href="#Schedule" class="nextPage-button"
                     ><i class="fas fa-arrow-down fa-lg"></i
                   ></a>
                   <a href="#Information" class="booking-button">馬上報名</a>
@@ -161,20 +161,68 @@
           </h2>
         </div>
       </div>
-      <div class="schedule-container">
+      <div class="schedule-container" id="Schedule">
         <div class="schedule-wrapper">
+          <div class="schedule-title">
+            <h2>活動檔期</h2>
+          </div>
           <div class="schedule-item-group">
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
-            <div class="schedule-item"></div>
+            <div class="schedule-item-1">
+              <h3>歷史之旅</h3>
+              <ul>
+                <a href="#Information"
+                  ><li><p>第一個舞台表演： 週五晚上7:00 - 9:00</p></li></a
+                >
+                <a href="#Information"
+                  ><li><p>第一個舞台表演： 週五晚上7:00 - 9:00</p></li></a
+                >
+                <a href="#Information"
+                  ><li><p>第三個舞台表演： 週日下午2:00 - 下午 4:00</p></li></a
+                >
+              </ul>
+            </div>
+            <div class="schedule-item-2">
+              <h3>城市大自然</h3>
+              <ul>
+                <a href="#Information"
+                  ><li><p>第一個舞台表演： 週六上午11:00 - 下午 1:00</p></li></a
+                >
+                <a href="#Information"
+                  ><li><p>第二個舞台表演： 週日下午3:00 - 下午 5:00</p></li></a
+                >
+              </ul>
+            </div>
+            <div class="D-line-1"></div>
+            <div class="D-line-2"></div>
+            <div class="schedule-item-3">
+              <h3>街頭藝術之旅</h3>
+              <ul>
+                <a href="#Information">
+                  <li><p>第一個舞台表演：週五 晚上8:00 - 10:00</p></li></a
+                >
+                <a href="#Information">
+                  <li><p>第二個舞台表演：週六 下午1:00 - 下午3:00</p></li></a
+                >
+                <a href="#Information">
+                  <li><p>第三個舞台表演：週日 上午11:00 - 上午1:00</p></li></a
+                >
+              </ul>
+            </div>
+            <div class="schedule-item-4">
+              <h3>多元文化探索</h3>
+              <ul>
+                <a href="#Information"
+                  ><li><p>第一個舞台表演： 週五晚上7:30 - 9:30</p></li></a
+                >
+                <a href="#Information"
+                  ><li><p>第二個舞台表演： 週六下午3:30 - 下午 5:30</p></li></a
+                >
+                <a href="#Information"
+                  ><li>
+                    <p>特別結尾表演： 週日下午4:00 - 下午 6:00<br /></p></li
+                ></a>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -274,7 +322,7 @@
           </div>
         </div>
       </div>
-      <div class="line"><div class="d-line"></div></div>
+      <div class="line"><div class="D-line-3"></div></div>
       <div class="traffic-container" id="Traffic">
         <div class="traffic-text">
           <h1>交通資訊</h1>
