--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images-active/Logo.png" />
-    <title>Processing</title>
+    <title>寶島慢播市集ー日式市集</title>
     <link rel="stylesheet" href="main.css" type="text/css" />
     <link rel="stylesheet" href="reset.css" type="text/css" />
     <!-- font awesome -->
@@ -65,10 +65,10 @@
               ><i class="fas fa-scroll" style="color: #404040"></i>市集介紹</a
             >
             <a class="nav-link" href="#Schedule"
-              ><i class="fas fa-images" style="color: #404040"></i>活動檔期</a
+              ><i class="fas fa-clock" style="color: #404040"></i>活動檔期</a
             >
             <a class="nav-link" href="#Information"
-              ><i class="far fa-bookmark" style="color: #404040"></i>活動預約</a
+              ><i class="fas fa-bookmark" style="color: #404040"></i>活動預約</a
             >
             <a class="nav-link" href="#Traffic"
               ><i class="fas fa-info-circle" style="color: #404040"></i
