--- a/index.html
+++ b/index.html
@@ -36,61 +36,88 @@
     <script src="animation.js" type="text/javascript"></script>
   </head>
   <body>
-    <header class="fixed-top header" id="homepage">
-      <nav
-        class="navbar navbar-expand-lg navbar-light bg-transparent"
-        id="navbar"
-      >
-        <a class="navbar-brand" href="#">
-          <img
-            src="./images-active/Logo.png"
-            class="d-inline-block align-middle navbar-logo"
-          />
-          寶島慢播市集</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <a class="nav-link" href="#"
+    <header class="site-header" id="homepage">
+      <nav id="nav">
+        <ul>
+          <li>
+            <a class="nav-logo" href="#">
+              <img src="./images-active/Logo.png" class="nav-logo" />
+              <span>寶島慢播市集</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="nav-links"
               ><i class="fas fa-home" style="color: #404040"></i>首 頁</a
             >
-            <a class="nav-link" href="#Introduction"
+          </li>
+          <li>
+            <a href="#Introduction" class="nav-links"
               ><i class="fas fa-scroll" style="color: #404040"></i>市集介紹</a
             >
-            <a class="nav-link" href="#Schedule"
+          </li>
+          <li>
+            <a href="#Schedule" class="nav-links"
               ><i class="fas fa-clock" style="color: #404040"></i>活動檔期</a
             >
-            <a class="nav-link" href="#Information"
+          </li>
+          <li>
+            <a href="#Information" class="nav-links"
               ><i class="fas fa-bookmark" style="color: #404040"></i>活動預約</a
             >
-            <a class="nav-link" href="#Traffic"
+          </li>
+          <li>
+            <a href="#Traffic" class="nav-links"
               ><i class="fas fa-info-circle" style="color: #404040"></i
               >交通資訊</a
             >
-            <a class="nav-link" href="#Contact"
+          </li>
+          <li>
+            <a href="#Contact" class="nav-links"
               ><i class="fas fa-envelope" style="color: #404040"></i>聯絡我們</a
             >
-          </ul>
-          <div class="button-parent">
-            <button
-              class="btn btn-success my-2 my-sm-0 btn-block"
-              type="button"
-            >
-              登入
-            </button>
-          </div>
+          </li>
+        </ul>
+        <a href="" class="login-btn">登入</a>
+        <div class="toggle_btn">
+          <i class="fas fa-bars fa-2x" style="color: #404040"></i>
         </div>
       </nav>
+      <div class="dropdown_menu" id="dropdown_menu">
+        <ul>
+          <li>
+            <a href="#" class="nav-links-drop"
+              ><i class="fas fa-home" style="color: #404040"></i>首 頁</a
+            >
+          </li>
+          <li>
+            <a href="#Introduction" class="nav-links-drop"
+              ><i class="fas fa-scroll" style="color: #404040"></i>市集介紹</a
+            >
+          </li>
+          <li>
+            <a href="#Schedule" class="nav-links-drop"
+              ><i class="fas fa-clock" style="color: #404040"></i>活動檔期</a
+            >
+          </li>
+          <li>
+            <a href="#Information" class="nav-links-drop"
+              ><i class="fas fa-bookmark" style="color: #404040"></i>活動預約</a
+            >
+          </li>
+          <li>
+            <a href="#Traffic" class="nav-links-drop"
+              ><i class="fas fa-info-circle" style="color: #404040"></i
+              >交通資訊</a
+            >
+          </li>
+          <li>
+            <a href="#Contact" class="nav-links-drop"
+              ><i class="fas fa-envelope" style="color: #404040"></i>聯絡我們</a
+            >
+          </li>
+        </ul>
+        <a href="" class="login-btn-drop">登入</a>
+      </div>
     </header>
     <div
       id="carouselSlidesOnly"
