--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="animation.js" type="text/javascript"></script>
   </head>
   <body>
+    <script></script>
     <header class="site-header" id="homepage">
       <nav id="nav">
         <ul>
