--- a/index.html
+++ b/index.html
@@ -125,8 +125,20 @@
         <a href="" class="login-btn-drop">登入</a>
       </div>
     </header>
-    <div class="hero-container">
+    <!-- <div class="hero-container">
       <div class="hero-wrapper">
+        <div class="hero-text">
+          <div class="heading">
+            <p><span>寶島</span>慢播 假日市集</p>
+          </div>
+        <div class="caption">
+          <p>
+            這裡的一切都如同慢動作電影一般，每一個瞬間都讓人難以忘懷。<br />
+            藝術品、手工藝品和人情的溫暖都值得細細品味，
+            而音樂和表演也如一場悠長的夢境，<br />將人們帶入一個奇妙的世界。在這個慢時光的季節，享受當下，並感受生活的豐富多彩。
+          </p>
+        </div>
+      </div>
         <div class="hero-image">
           <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
             <img class="image" src="./Gallery/market_pic02.JPG" draggable="false" />
@@ -136,35 +148,44 @@
             <img class="image" src="./Gallery/market_pic20.JPG" draggable="false" />
             <img class="image" src="./Gallery/market_pic04.JPG" draggable="false" />
             <img class="image" src="./Gallery/market_pic05.JPG" draggable="false" />
+            <img class="image" src="./Gallery/market_pic05.JPG" draggable="false" />
+            <img class="image" src="./Gallery/market_pic05.JPG" draggable="false" />
+            <img class="image" src="./Gallery/market_pic05.JPG" draggable="false" />
+            <img class="image" src="./Gallery/market_pic05.JPG" draggable="false" />
           </div>
         </div>
       </div>
-    </div>
-    <!-- <div
+    </div> -->
+    <div
       id="carouselSlidesOnly"
       class="carousel slide carousel-fade"
       data-ride="carousel"
     >
-      <div class="item-text animate__animated animate__fadeIn">
-        <div class="item-text-content">
-          <div class="heading">
-            <p><span>寶島</span>慢播 假日市集</p>
-          </div>
-          <div class="caption">
-            <p>
-              這裡的一切都如同慢動作電影一般，每一個瞬間都讓人難以忘懷。<br />
-              藝術品、手工藝品和人情的溫暖都值得細細品味，
-              而音樂和表演也如一場悠長的夢境，<br />將人們帶入一個奇妙的世界。在這個慢時光的季節，享受當下，並感受生活的豐富多彩。
-            </p>
-          </div>
-          <div class="btns">
-            <a href="#Introduction" class="hero-btn">繼續瀏覽</a>
-          </div>
-        </div>
-      </div>
+    <ol class="carousel-lists">
+      <li class="carousel-object" data-target="#carouselSlidesOnly" data-slide-to="0" class="active"><img src="./Gallery/market_pic05.JPG" alt=""></li>
+      <li class="carousel-object" data-target="#carouselSlidesOnly" data-slide-to="1"><img src="./Gallery/market_pic07.JPG" alt=""></li>
+      <li class="carousel-object" data-target="#carouselSlidesOnly" data-slide-to="2"><img src="./Gallery/market_pic12.JPG" alt=""></li>
+    </ol>
       <div class="carousel-inner">
         <div class="carousel-item active slide-1">
-          <div class="slide-gradient"></div>
+          <div class="item-text animate__animated animate__fadeIn">
+          <div class="item-text-content">
+            <div class="heading">
+              <p><span>寶島</span>慢播 假日市集</p>
+            </div>
+            <div class="caption">
+              <p>
+                這裡的一切都如同慢動作電影一般，每一個瞬間都讓人難以忘懷。<br />
+                藝術品、手工藝品和人情的溫暖都值得細細品味，
+                而音樂和表演也如一場悠長的夢境，<br />將人們帶入一個奇妙的世界。在這個慢時光的季節，享受當下，並感受生活的豐富多彩。
+              </p>
+            </div>
+            <div class="btns">
+              <a href="#Introduction" class="hero-btn">繼續瀏覽</a>
+            </div>
+          </div>
+        </div>
+        <div class="slide-gradient"></div>
         </div>
         <div class="carousel-item slide-2">
           <div class="slide-gradient"></div>
@@ -173,7 +194,7 @@
           <div class="slide-gradient"></div>
         </div>
       </div>
-    </div> -->
+    </div>
     <main>
       <div class="intro-section-holder" id="Introduction">
         <div class="intro-wrapper">
